CV05 - Add CV05.md implementation Option B

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+    // Přidejte H2 databázi pro testování
+    testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
